# ZotWatch

./: .env.example  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily_watch.yml
config/: config.yaml
data/: journal_whitelist.csv
scripts/: test_api_connections.py
src/: build_profile.py  cli.py  dedupe.py  faiss_store.py  fetch_new.py  ingest_zotero_api.py  logging_utils.py  models.py  push_to_zotero.py  report_html.py  rss_writer.py  score_rank.py  settings.py  storage.py  utils.py  vectorizer.py
src/zotwatch/: __init__.py
src/zotwatch/cli/: main.py
src/zotwatch/config/: loader.py  settings.py
src/zotwatch/core/: __init__.py  constants.py  exceptions.py  models.py  protocols.py
src/zotwatch/infrastructure/: cache_base.py
src/zotwatch/infrastructure/embedding/: __init__.py  base.py  cached.py  dashscope.py  factory.py  faiss_index.py  voyage.py
src/zotwatch/infrastructure/http/: client.py
src/zotwatch/infrastructure/storage/: sqlite.py
src/zotwatch/llm/: __init__.py  factory.py  retry.py
src/zotwatch/output/: html.py  push.py
src/zotwatch/pipeline/: __init__.py  featured.py  filters.py  ingest.py  interest_ranker.py  profile.py  profile_clusterer.py  profile_ranker.py  profile_stats.py  score.py  watch.py
src/zotwatch/sources/: arxiv.py  crossref.py  zotero.py
src/zotwatch/templates/: report.html
src/zotwatch/utils/: logging.py
tests/: __init__.py  conftest.py  test_datetime.py  test_exceptions.py  test_filters.py  test_logging.py  test_models.py  test_retry.py  test_watch_pipeline.py
