[project]
name = "zotwatch"
version = "0.1.0"
description = "基于 Zotero 数据构建个人兴趣画像的学术文献推荐系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.6",
    "pyyaml>=6.0.1",
    "rapidfuzz>=3.5",
    "jinja2>=3.1",
    "feedparser>=6.0",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
